# postnl-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: packages.rs
src/: auth.rs  data.rs  dimensions.rs  formatted.rs  lib.rs  sensordata.txt  test.rs
