[package]
name = "postnl"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
description = "Rust API client for PostNL consumer api"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/postnl-rs"

[lib]
name = "postnl"
path = "src/lib.rs"

[dependencies]
isahc = { version ="0.7", features = ["json"] }
maplit = "1.0"
serde = { version = "1.0", features = ["derive"] }
parse-display = "0.1"
chrono = { version = "0.4", features = ["serde"] }
iso_country = { version = "0.1", features = ["serde"] }
uom = "0.25"
regex = { version = "1.3", default-features = false, features = ["std", "perf"] }
once_cell = "1.2.0"
err-derive = "0.2"
serde_urlencoded = "0.6"
serde_json = "1.0"

[dev-dependencies]
dotenv = "0.14"
runtime = "0.3.0-alpha.6"