[package]
name = "postnl"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
description = "Rust API client for PostNL consumer api"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/postnl-rs"

[lib]
name = "postnl"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.10", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
parse-display = "0.1"
chrono = { version = "0.4", features = ["serde"] }
iso_country = { version = "0.1", features = ["serde"] }
regex = { version = "1.3", default-features = false, features = ["std", "perf"] }
once_cell = "1.2.0"
err-derive = "0.2"
serde_json = "1.0"
rand = "0.7.3"
base64 = "0.12.1"
sha2 = "0.8.1"
url = "2.1.1"

[dev-dependencies]
dotenv = "0.14"
tokio = { version = "0.2.21", features = ["macros"] }
main_error = "0.1.0"